config/pihole/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-external
  name: pihole
  namespace: pihole-system
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`pihole.local.grieco.me`)
    services:
    - kind: Service
      name: pihole-web
      namespace: pihole-system
      port: 80
      # scheme: https
      # strategy: RoundRobin
    middlewares:
      - name: default-headers
        namespace: traefik-system
      - name: pihole-redirect
        namespace: traefik-system
  tls:
    secretName: local-grieco-me-tls
